update job posting fix done